add more documentation to category
